fix: 02-css-modules NavBar showing behind products, button variant 'ghost' has a background color

--- a/02-css-modules/src/components/Button/Button.module.css
+++ b/02-css-modules/src/components/Button/Button.module.css
@@ -5,6 +5,7 @@
 	min-width: 80px;
 	cursor: pointer;
 	color: var(--accent-color-2);
+	background-color: transparent;
 }
 
 .btnSolid {
