--- a/02-css-modules/src/components/NavBar/NavBar.module.css
+++ b/02-css-modules/src/components/NavBar/NavBar.module.css
@@ -2,6 +2,7 @@
 	position: sticky;
 	top: 0;
 	display: flex;
+	z-index: 1;
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
